--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-lg h-100">
-            <div class="d-flex flex-column text-center h-100 p-5">
-                <label class="fs-2 mt-5">Parichay</label>
+            <div class="d-flex flex-column text-center p-5 h-100">
+                <label class="fs-2">Parichay</label>
                 <label>presents</label>
-                <label class="display-1 my-4">Retro <br> &nbsp; &nbsp; Night</label>
-                <img class="my-auto" src="assets/imgs/phone.png" style="max-height: 600px; max-width: 100%;">
-                <label>App brought to you by</label>
+                <label class="display-3 mt-2 mb-auto">Retro <br> &nbsp; &nbsp; Night</label>
+                <img class="mb-auto" src="assets/imgs/phone.png" width="500" style="margin-top: -200px;">
+                <label class="mt-auto">App brought to you by</label>
                 <label class="fw-bold">GITHUB COMMUNITY GITAM</label>
             </div>
         </div>
