--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column text-center h-100 p-5" [formGroup]="formData">
-    <label class="fs-2 pt-5">Parichay</label>
+    <label class="fs-2">Parichay</label>
     <label>presents</label>
     <label class="display-1 my-4">Retro <br> &nbsp; &nbsp; Night</label>
     <input class="form-control my-2 mx-auto" type="text" placeholder="Username" formControlName="username">
