--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
             lightColor="#B67FE3"></qr-code>
     </div>
 
-    <div class="d-flex">
+    <div class="d-flex" *ngIf="uiData.dev">
         <div class="rounded-circle d-flex mx-auto p-2 mt-3" style="cursor: pointer; background-color: #AF78DC;"
             [routerLink]="'/scan'">
             <img class="m-auto pt-1" src="assets/imgs/scan.png" height="50" width="50">
