--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,8 @@
 html,
 body {
     height: 100%;
+    margin: 0px;
+    padding: 0px;
     overflow-y: auto;
     font-family: 'Rubik';
     background: linear-gradient(180deg, #301447 0%, rgba(105, 33, 163, 0.59) 100%);
