--- a/src/app/scan/scan.component.scss
+++ b/src/app/scan/scan.component.scss
@@ -3,3 +3,13 @@
     width: 250px;
     border-radius: 15px;
 }
+
+input {
+    border: 0px !important;
+    box-shadow: none !important;
+    background-color: #e6c6ff;
+}
+
+input:checked {
+    background-color: #9d5ece ;
+}
