--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-lg h-100">
-            <div class="d-flex flex-column text-center p-5 h-100">
+            <div class="d-flex flex-column text-center py-5 h-100">
                 <label class="fs-2">Parichay</label>
                 <label>presents</label>
                 <label class="display-3 mt-2 mb-auto">Retro <br> &nbsp; &nbsp; Night</label>
-                <img class="mb-auto" src="assets/imgs/phone.png" width="500" style="margin-top: -200px;">
+                <img class="img-fluid mb-auto" src="assets/imgs/phone.png" width="500" style="margin-top: -200px;">
                 <label class="mt-auto">App brought to you by</label>
                 <label class="fw-bold">GITHUB COMMUNITY GITAM</label>
             </div>
         </div>
         <div class="col-md h-100">
-            <div class="d-flex flex-column text-center p-5 h-100">
+            <div class="d-flex flex-column text-center py-5 h-100">
                 <label class="fs-4">
                     "Parichay" - an Ethnic Day, after four years of silence on campus, consists of a Retro Music Night
                     where a three-piece musical band "Purani Jeans" shall play soothing retro songs to which students
