--- a/src/app/scan/scan.component.html
+++ b/src/app/scan/scan.component.html
@@ -1,6 +1,16 @@
 <div class="d-flex flex-column p-5 h-100">
-    <zxing-scanner class="mx-auto" [formats]="allowedFormats" (scanSuccess)="scanSuccessHandler($event)"></zxing-scanner>
-    <div *ngIf="spinner" class="spinner-border spinner-border-sm mx-auto"></div>
+    <div class="d-flex mx-auto" style="height: 250px; width: 250px;">
+        <zxing-scanner *ngIf="!spinner" class="mx-auto" [formats]="allowedFormats"
+            (scanSuccess)="scanSuccessHandler($event)"></zxing-scanner>
+        <div class="m-auto">
+            <div *ngIf="spinner" class="spinner-border spinner-border-sm"></div>
+        </div>
+    </div>
+    <div class="form-check form-switch mx-auto my-5">
+        <input class="form-check-input" type="checkbox" role="switch" [(ngModel)]="checkin">
+        <label class="form-check-label" *ngIf="checkin">Check in</label>
+        <label class="form-check-label" *ngIf="!checkin">Check out</label>
+    </div>
     <div class="mx-auto mt-auto">
         <button class="btn btn-light m-4" [routerLink]="'/dashboard'">Dashboard</button>
     </div>
