--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,5 @@
-.fair-card {
-    aspect-ratio: 3.3/2.1;
-    max-height: 300px;
-    max-width: 500px;
+.card {
+    aspect-ratio: 1;
+    max-width: 300px;
     border-radius: 30px;
-    background-color: #B67FE3;
 }
