--- a/src/app/scan/scan.component.scss
+++ b/src/app/scan/scan.component.scss
@@ -7,9 +7,8 @@
 input {
     border: 0px !important;
     box-shadow: none !important;
-    background-color: #e6c6ff;
 }
 
 input:checked {
-    background-color: #9d5ece ;
+    background-color: #bbbbbb ;
 }
