readme and credits

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,6 @@
         </div>
 
         <label class="mt-auto text-center">App brought to you by</label>
-        <label class="fw-bold text-center cp" (click)="open()">GITHUB COMMUNITY GITAM</label>
-
+        <a class="fw-bold text-center cp" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
