--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -12,7 +12,7 @@
             <div *ngIf="spinner" class="spinner-border spinner-border-sm"></div>
         </button>
         <label class="my-auto">OFFLINE REGISTRATION</label>
-        <label class="">App brought to you by</label>
-        <label class="fw-bold" (click)="open()">GITHUB COMMUNITY GITAM</label>
+        <label>App brought to you by</label>
+        <a class="fw-bold" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
