--- a/src/app/scan/scan.component.html
+++ b/src/app/scan/scan.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column p-5 h-100">
+<div class="d-flex flex-column p-5 h-100 text-center">
     <div class="d-flex mx-auto" style="height: 250px; width: 250px;">
         <zxing-scanner *ngIf="!spinner" class="mx-auto" [formats]="allowedFormats"
             (scanSuccess)="scanSuccessHandler($event)"></zxing-scanner>
@@ -11,7 +11,6 @@
         <label class="form-check-label" *ngIf="checkin">Check in</label>
         <label class="form-check-label" *ngIf="!checkin">Check out</label>
     </div>
-    <div class="mx-auto mt-auto">
-        <button class="btn btn-light m-4" [routerLink]="'/dashboard'">Dashboard</button>
-    </div>
+    <label class="mt-auto">App brought to you by</label>
+    <a class="fw-bold" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
 </div>
