added registrations, refactors

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,6 +12,6 @@
             <div *ngIf="spinner" class="spinner-border spinner-border-sm"></div>
         </button>
         <label class="mt-auto">App brought to you by</label>
-        <a class="fw-bold cp" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
+        <a class="fw-bold" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
