--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,22 +11,31 @@
         </div>
         <label *ngIf="userdata.dev">Dev Account</label>
         <label>{{time}}</label>
-
         <div class="card d-flex flex-column mt-3 p-3 mx-auto">
             <label class="me-auto mb-0 fs-3 text-black">Event Pass</label>
             <qr-code class="m-auto" [value]="userdata.username" size="220" errorCorrectionLevel="M"></qr-code>
         </div>
-
-        <div class="d-flex" *ngIf="userdata.dev">
-            <div class="rounded-circle d-flex mx-auto bg-secondary cp p-2 mt-3" routerLink="/scan">
-                <img class="m-auto pt-1" src="assets/imgs/scan.png" height="50" width="50">
-            </div>
-            <div class="rounded-circle d-flex mx-auto bg-secondary p-2 mt-3" routerLink="/register">
-                <img class="m-auto pt-1" src="assets/imgs/tickets.png" height="50" width="50">
-            </div>
+        <div class="d-flex justify-content-evenly pt-3" *ngIf="userdata.dev">
+            <a href="/scan" style="width: 80px;">
+                <div class="rounded-circle bg-secondary d-flex m-auto" style="height:60px; width:60px;">
+                    <img class="m-auto pt-1" src="assets/imgs/scan.png" height="50">
+                </div>
+                <label class="text-center">CheckIn / CheckOut</label>
+            </a>
+            <a href="/register">
+                <div class="rounded-circle bg-secondary d-flex m-auto" style="height:60px; width:60px;">
+                    <img class="m-auto pt-1 ps-2" src="assets/imgs/register.png" height="48">
+                </div>
+                <label class="text-center">Register</label>
+            </a>
+            <a href="/registrations">
+                <div class="rounded-circle bg-secondary d-flex m-auto" style="height:60px; width:60px;">
+                    <img class="m-auto pt-1" src="assets/imgs/customer.png" height="45">
+                </div>
+                <label class="text-center">Registrations</label>
+            </a>
         </div>
-
         <label class="mt-auto text-center">App brought to you by</label>
-        <a class="fw-bold text-center cp" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
+        <a class="fw-bold text-center" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
