--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,6 @@
         <label class="fs-4 my-auto px-5">{{config.eventDescription}}</label>
         <button class="btn btn-light fw-bold border-0 m-auto px-4" routerLink="/login">Login</button>
         <label>App brought to you by</label>
-        <a class="fw-bold cp" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
+        <a class="fw-bold" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
