--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,41 +1,38 @@
-<div class="container h-100">
+<div class="container h-100" >
     <div class="d-flex flex-column h-100 py-5">
-
         <div class="d-flex">
-            <label class="fs-3">Welcome</label>
+            <div class="fs-2">{{userdata.fullname}}</div>
             <img class="ms-auto my-auto" src="assets/imgs/logout1.png" height="30" width="30" (click)="logout()"
                 style="cursor: pointer;">
         </div>
-        <div class="d-flex">
-            <label class="fs-3">{{userdata.fullname}}</label>
-        </div>
-        <label *ngIf="userdata.dev">Dev Account</label>
-        <label>{{time}}</label>
+        <div *ngIf="eventData.stall.includes(userdata.username)">Stall Account</div>
+        <div>{{time}} </div>
         <div class="card d-flex flex-column mt-3 p-3 mx-auto">
-            <label class="me-auto mb-0 fs-3 text-black">Event Pass</label>
-            <qr-code class="m-auto" [value]="userdata.username" size="220" errorCorrectionLevel="M"></qr-code>
+            <div class="me-auto mb-0 fs-3 text-black">{{eventData.name}}</div>
+            <qr-code class="m-auto" [value]="eventData.name + '|' +userdata.username" size="220"
+                errorCorrectionLevel="M"></qr-code>
         </div>
-        <div class="d-flex justify-content-evenly pt-3" *ngIf="userdata.dev">
-            <a href="/scan" style="width: 80px;">
+        <div class="d-flex justify-content-evenly pt-3" *ngIf="eventData.stall.includes(userdata.username)">
+            <a [href]="eventData.name +'/scan'" style="width: 80px;">
                 <div class="rounded-circle bg-secondary d-flex m-auto" style="height:60px; width:60px;">
                     <img class="m-auto pt-1" src="assets/imgs/scan.png" height="50">
                 </div>
-                <label class="text-center">CheckIn / CheckOut</label>
+                <div class="text-center">Scan QR</div>
             </a>
-            <a href="/register">
+            <a [href]="eventData.name +'/register'">
                 <div class="rounded-circle bg-secondary d-flex m-auto" style="height:60px; width:60px;">
                     <img class="m-auto pt-1 ps-2" src="assets/imgs/register.png" height="48">
                 </div>
-                <label class="text-center">Register</label>
+                <div class="text-center">Register</div>
             </a>
-            <a href="/registrations">
+            <a [href]="eventData.name +'/registrations'">
                 <div class="rounded-circle bg-secondary d-flex m-auto" style="height:60px; width:60px;">
                     <img class="m-auto pt-1" src="assets/imgs/customer.png" height="45">
                 </div>
-                <label class="text-center">Registrations</label>
+                <div class="text-center">Registrations</div>
             </a>
         </div>
-        <label class="mt-auto text-center">App brought to you by</label>
+        <div class="mt-auto text-center">App brought to you by</div>
         <a class="fw-bold text-center" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
