--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,30 @@
 <div class="container h-100">
-    <div class="d-flex flex-column text-center h-100 py-5">
-        <label class="fs-2">{{config.clubName}}</label>
-        <label>presents</label>
-        <label class="display-3 mt-2">{{config.eventTitle1}}</label>
-        <label class="display-3">{{config.eventTitle2}}</label>
-        <label class="fs-4 my-auto px-5">{{config.eventDescription}}</label>
-        <button class="btn btn-light fw-bold border-0 m-auto px-4" routerLink="/login">Login</button>
-        <label>App brought to you by</label>
-        <a class="fw-bold" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
+    <div class="d-flex flex-column h-100 py-5">
+        <div class="fs-1 mb-3">Register Easy</div>
+        <div class="fs-4">What's Register Easy ?</div>
+        <div class="fs-5 mb-3">
+            Register Easy is a Web App where the Gitam Clubs can register students for the events and Authenticate them
+            by scanning their QRs during the event.
+        </div>
+        <div class="fs-4">Why Register Easy ?</div>
+        <ul class="fs-5 mb-3">
+            Register Easy makes a lot of things easier mainly because of the following features:
+            <li>Get a free Web Page for the event.</li>
+            <li>Register students using their Student Portal Credentials.</li>
+            <li>Scan QRs of people to check-in during event.</li>
+            <li>View/Search all the registered people for the event.</li>
+        </ul>
+        <div class="fs-4">Instructions</div>
+        <ul class="fs-5 mb-3">
+            <li>Request for an Admin account by mailing me from your club email.</li>
+            <li>Use your Admin account to add Events <a href="/add-event">HERE.</a></li>
+            <li>Use the Stall accounts you provided, to register students.</li>
+            <li>Collect payment from students.</li>
+            <li>Use Stall accounts to Scan QRs of Students to verify their registration on event day.</li>
+        </ul>
+
+        <a href="/events">Checkout all the events here</a>
+        <div class="text-center mt-auto">App brought to you by</div>
+        <a class="fw-bold text-center" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
 </div>
