--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="container h-100">
     <div class="d-flex flex-column h-100 py-5">
-        <div class="fs-1 mb-3">Register Easy</div>
-        <div class="fs-4">What's Register Easy ?</div>
+        <div class="fs-1 mb-3">Registro</div>
+        <div class="fs-4">What's Registro ?</div>
         <div class="fs-5 mb-3">
-            Register Easy is a Web App where the Gitam Clubs can register students for the events and Authenticate them
+            Registro is a Web App where the Gitam Clubs can register students for the events and Authenticate them
             by scanning their QRs during the event.
         </div>
-        <div class="fs-4">Why Register Easy ?</div>
+        <div class="fs-4">Why Registro ?</div>
         <ul class="fs-5 mb-3">
-            Register Easy makes a lot of things easier mainly because of the following features:
+            Registro makes a lot of things easier mainly because of the following features:
             <li>Get a free Web Page for the event.</li>
             <li>Register students using their Student Portal Credentials.</li>
             <li>Scan QRs of people to check-in during event.</li>
