added date and cost for event

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,24 +1,33 @@
 <div class="container h-100">
-    <div class="d-flex flex-column h-100 py-5" [formGroup]="formData">
-        <label class="fs-1 mb-3">Add a new event</label>
-        <div class="fs-4">Event Name: </div>
-        <input class="fs-5 mb-3" type="text" maxlength="20" formControlName="name">
-        <div class="fs-4">Event Description: </div>
-        <textarea class="fs-5 mb-3" type="text" maxlength="80" style="min-height: 100px;"
-            formControlName="desc"> </textarea>
-        <div class="fs-4">Club name: </div>
-        <input class="fs-5 mb-3" type="text" maxlength="20" formControlName="club_name">
-        <label class="fs-4">Stall accounts:</label>
-        <div class="mb-1">
-            <button class="btn btn-light m-1" *ngFor="let account of stall; let i = index"
-                (click)="stall.splice(i, 1)">{{account}}</button>
+    <label class="fs-1 mb-3">Add a new event</label>
+    <div class="row" [formGroup]="formData">
+        <div class="col">
+            <div class="fs-4">Event Name: </div>
+            <input class="fs-5 mb-3" type="text" maxlength="20" formControlName="name">
+            <div class="fs-4">Event Description: </div>
+            <textarea class="fs-5 mb-3" type="text" maxlength="80" style="min-height: 100px;"
+                formControlName="desc"> </textarea>
+            <div class="fs-4">Club name: </div>
+            <input class="fs-5 mb-3" type="text" maxlength="20" formControlName="club_name">
         </div>
-        <input class="fs-5" type="text" (keyup.Space)="add_account($event.target)" style="text-transform: lowercase;">
-        <button class="btn btn-light my-3 fw-bold mx-auto border-0 mb-auto" data-bs-toggle="modal"
-            data-bs-target="#staticBackdrop">Add Event</button>
-        <label class="text-center mt-auto">App brought to you by</label>
-        <a class="fw-bold text-center" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
+        <div class="col">
+            <label class="fs-4">Stall accounts:</label>
+            <div class="mb-1">
+                <button class="btn btn-light m-1" *ngFor="let account of stall; let i = index"
+                    (click)="stall.splice(i, 1)">{{account}}</button>
+            </div>
+            <input class="fs-5 mb-3" type="text" (keyup.Enter)="add_account($event.target)"
+                style="text-transform: lowercase;">
+            <div class="fs-4">Event Date: </div>
+            <input class="fs-5 mb-3" type="text" maxlength="20" formControlName="date">
+            <div class="fs-4">Cost: </div>
+            <input class="fs-5 mb-3" type="text" maxlength="20" formControlName="cost">
+        </div>
     </div>
+    <button class="btn btn-light my-3 fw-bold mx-auto border-0 mb-auto" data-bs-toggle="modal"
+        data-bs-target="#staticBackdrop">Add Event</button>
+    <div class="text-center mt-auto">App brought to you by</div>
+    <div class="fw-bold text-center" href="https://supersu-man.github.io/">Sumanth Perambuduri</div>
 </div>
 
 
