added navbar, bug fixes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,23 @@
-<div class="container h-100">
+<div class="container h-100 pt-5" >
+    <nav class="navbar navbar-expand-sm fixed-top border" style="background-color: rgb(255, 255, 255);">
+        <div class="container">
+            <div class="d-flex flex-column synthek my-auto navbar-brand" style="letter-spacing: 2px;">
+                <a class="fs-4 text-black me-3" href="#">Registro </a>
+            </div>
+            <button class="navbar-toggler ms-auto collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav-padding px-2 align-items-center ms-auto">
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="events">All Events</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="add-event">Add Event</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="d-flex flex-column h-100 py-5">
-        <div class="fs-1 mb-3">Registro</div>
         <div class="fs-4">What's Registro ?</div>
         <div class="fs-5 mb-3">
             Registro is a Web App where the Gitam Clubs can register students for the events and Authenticate them
@@ -9,7 +26,6 @@
         <div class="fs-4">Why Registro ?</div>
         <ul class="fs-5 mb-3">
             Registro makes a lot of things easier mainly because of the following features:
-            <li>Get a free Web Page for the event.</li>
             <li>Register students using their Student Portal Credentials.</li>
             <li>Scan QRs of people to check-in during event.</li>
             <li>View/Search all the registered people for the event.</li>
@@ -17,13 +33,12 @@
         <div class="fs-4">Instructions</div>
         <ul class="fs-5 mb-3">
             <li>Request for an Admin account by mailing me from your club email.</li>
-            <li>Use your Admin account to add Events <a href="/add-event">HERE.</a></li>
+            <li>Use your Admin account to add Events <a href="add-event">HERE.</a></li>
             <li>Use the Stall accounts you provided, to register students.</li>
             <li>Collect payment from students.</li>
             <li>Use Stall accounts to Scan QRs of Students to verify their registration on event day.</li>
         </ul>
 
-        <a href="/events">Checkout all the events here</a>
         <div class="text-center mt-auto">App brought to you by</div>
         <a class="fw-bold text-center" href="https://supersu-man.github.io/">Sumanth Perambuduri</a>
     </div>
