--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,5 +1,5 @@
-<div class="container h-100">
-    <label class="fs-1 mb-3">Add a new event</label>
+<div class="container h-100 py-5">
+    <div class="display-4">Add a new event</div>
     <div class="row" [formGroup]="formData">
         <div class="col">
             <div class="fs-4">Event Name: </div>
