added contact, removed credits at some places

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                 <ul class="navbar-nav nav-padding px-2 align-items-center ms-auto">
                     <li class="nav-item"><a class="nav-link text-black mx-2" href="events">All Events</a></li>
                     <li class="nav-item"><a class="nav-link text-black mx-2" href="add-event">Add Event</a></li>
-                    <li class="nav-item"><a class="nav-link text-black mx-2" href="contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="https://mail.google.com/mail/?view=cm&source=mailto&to=sumanthpera444@gmail.com">Contact</a></li>
                 </ul>
             </div>
         </div>
