--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100">
     <div class="d-flex flex-column text-center h-100 py-5" [formGroup]="formData">
         <label class="display-4 mb-2">Registration</label>
-        <label class="fs-2">{{eventData.club_name}}</label>
+        <label class="fs-2">{{eventData.club}}</label>
         <label class="my-1">presents</label>
         <label class="fs-2 mb-4">{{eventData.name}}</label>
         <input class="form-control my-2 mx-auto" type="text" placeholder="Username" formControlName="username" style="text-transform: lowercase;">
