--- a/src/app/registrations/registrations.component.html
+++ b/src/app/registrations/registrations.component.html
@@ -1,6 +1,6 @@
 <div class="container h-100">
     <div class="d-flex flex-column h-100 py-5">
-        <label class="text-center fs-2">{{eventData.club_name}}</label>
+        <label class="text-center fs-2">{{eventData.club}}</label>
         <label class="text-center my-1">presents</label>
         <label class="text-center fs-2 mb-4">{{eventData.name}}</label>
         <input class="form-control bg-accent my-2" type="text" placeholder="Search" [(ngModel)]="searchKey"
